homepage: fix z-index issues

--- a/docs/assets/homepage.css
+++ b/docs/assets/homepage.css
@@ -122,10 +122,12 @@ section.faq li span {
   width: var(--page-width);
   opacity: 0;
   transition: opacity 500ms;
+  z-index: 0;
 }
 
 .preview.active {
   opacity: 1;
+  z-index: 1;
 }
 
 .preview-inner {
@@ -192,18 +194,6 @@ section.faq li span {
 .ribbon-small-text {
   font-size: 20px !important;
   padding: 15px 0px 13px 12px !important;
-}
-
-#preview-web {
-  z-index: 2;
-}
-
-#preview-desktop {
-  z-index: 1;
-}
-
-#preview-tablet {
-  z-index: 0;
 }
 
 .features {
